--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bank_tech_test_js",
   "version": "1.0.0",
   "description": "#### For this tech test I will be rebuilding the previous bank tech test I did in Ruby, except this time in Javascript.",
-  "main": "index.js", 
+  "main": "index.js",
   "dependencies": {
     "jasmine": "^3.6.1",
     "karma": "^5.2.3",
@@ -10,11 +10,16 @@
     "nyc": "^15.1.0"
   },
   "devDependencies": {
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-jasmine": "^4.0.1"
+    "istanbul": "^0.4.5",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-chrome-launcher": "^2.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start my.conf.js"
   },
   "repository": {
     "type": "git",
